# MiRobot

./: .gitattributes
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
devel/.private/dwa_algorithm/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/gazebo_omni_plugins/: .catkin
devel/.private/mecanum_astar_planner/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mecanum_robot/: .catkin  setup.sh
devel/.private/navigation/: .catkin  .rosinstall  setup.sh
devel/.private/navigation_omni/: .catkin
dwa_algorithm/: CMakeLists.txt  package.xml
dwa_algorithm/rviz/: dwa_config.rviz
dwa_algorithm/src/: joystick_direction.py
gazebo_sim/gazebo_omni_plugins/: package.xml
gazebo_sim/omni_description/: package.xml
gazebo_sim/omni_gazebo/: package.xml
gazebo_sim/omni_wheel_driver/: CMakeLists.txt
logs/pgm_map_creator/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/slam_toolbox/: build.cmake.000.log.stderr
maps/: lab4_test.yaml  pasillo_1_to.yaml  pasillo_2_back.yaml  pasillo_3_to.yaml  scan1.yaml  scan_full_joined.yaml
mecanum_astar_planner/: CMakeLists.txt  package.xml
mecanum_astar_planner/launch/: astar_planner.launch
mecanum_astar_planner/maps/: scan_full.yaml
mecanum_astar_planner/rviz/: astar_planner.rviz
mecanum_astar_planner/scripts/: astar_global_planner.py  points_pub.py
mecanum_robot/: CMakeLists.txt  goals.txt  package.xml
mecanum_robot/launch/: joystick_dwa.launch
mecanum_robot/scripts/: .mecanum_controller.py.swp  dwa_navigation_controller.py  joystick_bypass_dwa.py
slam_dwa/: package.xml
slam_dwa/launch/: move_base.launch  navigation.launch
slam_dwa/maps/: mapa_paint.pgm
slam_dwa/param/: dwa_planner.yaml  global_costmap.yaml  move_base.yaml  teb_local_planner_params.yaml
src/gazebo_sim/gazebo_omni_plugins/: CMakeLists.txt
src/gazebo_sim/gazebo_omni_plugins/cfg/: gazebo_ros_omni_pid.cfg
src/gazebo_sim/gazebo_omni_plugins/include/gazebo_omni_plugins/: gazebo_ros_omni_drive_ac.h
src/gazebo_sim/gazebo_omni_plugins/launch/: gazebo_omni_pid.launch
src/gazebo_sim/gazebo_omni_plugins/src/: gazebo_ros_omni_drive_ac.cpp  gazebo_ros_omni_pid.cpp  gazebo_ros_omni_pid_param.cpp
src/slam_dwa/: CMakeLists.txt
(+162 files in other folders)
